# innieme

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  document_processor.py  innieme_bot.py  knowledge_manager.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_bot.py  test_bot.py  test_document_processor.py
.github/workflows/: python-app.yml
innieme_bot/: conversation_engine.py  discord_bot.py  document_processor.py  innieme_bot.py
src/innieme/: conversation_engine.py  discord_bot.py  discord_bot_config.py  document_processor.py  embeddings_factory.py  innie.py  knowledge_manager.py  vector_store_factory.py
src/innieme/cli/: run_bot.py
tests/: test_bot.py  test_discord_bot.py  test_discord_bot_config.py  test_document_processor.py  test_innieme_bot.py
